--- a/eduRend.vcxproj.filters
+++ b/eduRend.vcxproj.filters
@@ -82,11 +82,9 @@
     <ClInclude Include="lib\stb_image.h">
       <Filter>Libraries</Filter>
     </ClInclude>
-
     <ClInclude Include="src\dgpuforcer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-
     <ClInclude Include="imgui\imconfig.h">
       <Filter>Header Files\imgui</Filter>
     </ClInclude>
@@ -110,7 +108,6 @@
     </ClInclude>
     <ClInclude Include="imgui\imstb_truetype.h">
       <Filter>Header Files\imgui</Filter>
-
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -170,6 +167,9 @@
     </ClCompile>
     <ClCompile Include="imgui\imgui_widgets.cpp">
       <Filter>Source Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\cube.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
